# collider

./: .gitignore  CMakeLists.txt  LICENSE  README.md  SECURITY-AUDIT-REPORT.md  build.bat  build_macos.sh  config.yml  example-config.yml  vcpkg.json
.github/workflows/: build-release.yml  build.yml  release.yml
data/anime/: anime_characters.txt  anime_titles.txt  japanese_terms.txt
data/crypto/: crypto_phrases.txt
data/gaming/: fortnite_valorant.txt  gaming_terms.txt  league_terms.txt  minecraft_terms.txt  video_game_titles.txt  wow_terms.txt
data/literature/: canterbury_tales.txt  confucius_analects.txt  crime_punishment.txt  hound_baskervilles.txt  quran.txt  sign_of_four.txt  study_in_scarlet.txt  turn_of_screw.txt
data/lyrics/: album_names.txt  artists_bands.txt  famous_lyrics.txt  song_phrases.txt  song_references.txt
data/names/: anime_titles.txt  brand_names.txt  historical_figures.txt  sports_teams.txt  video_games.txt
data/passwords/: keyboard_patterns.txt  keyboard_walks.txt  l33t_speak.txt
data/quotes/: famous_phrases.txt  movie_phrases.txt  tv_catchphrases.txt  tv_shows.txt
data/rules/: crypto.rule
data/slang/: crypto_slang.txt  internet_memes.txt  reddit_4chan.txt
data/wordlists/: historical_dates.txt  internet_slang.txt  tech_terms.txt
docs/: ARCHITECTURE.md  BITCOIN-PUZZLE-DEEP-RESEARCH.md  BITCOIN-PUZZLE-STRATEGY.md  CHANGELOG.md  COMPREHENSIVE-ANALYSIS.md  CONFIGURATION.md  DEFCON-STRATEGIES.md  EDITION_SPLIT_PLAN.md  IMPLEMENTATION-PLAN.md  INSTALL.md  KANGAROO-IMPLEMENTATION-GUIDE.md  LANGUAGE-DECISION.md  PCFG-INTEGRATION.md  PERFORMANCE-TARGETS.md  POOL-ECONOMICS.md  RESEARCH.md  TODO.md  USAGE.md  WORDLIST-ARCHITECTURE.md  pool-research.md
processed/: stats.json
processed/rules/: best64.rule  crypto.rule
rules/: best64.rule  crypto.rule
scripts/: kangaroo-wrapper.sh  preprocess_data.py
src/: cuda_stub.cu  main.cpp
src/core/: brainwallet_state.hpp  config.hpp  crypto_cpu.hpp  dedup_bloom.hpp  dynamic_rule_weights.hpp  edition.hpp  hit_verifier.hpp  kangaroo.hpp  logger.hpp  puzzle_config.hpp  rule_engine.cpp  rule_engine.hpp  search_state.hpp  types.hpp  warpwallet.hpp  yaml_config.hpp
src/generators/: brain_wallet_engine.hpp  markov.hpp  passphrase_generator.cpp  passphrase_generator.hpp  pcfg.hpp  prefix_cache.hpp  priority_queue.cpp  priority_queue.hpp  streaming_brain_wallet.hpp
src/gpu/: bloom_filter.cu  brain_wallet_gpu.cpp  brain_wallet_gpu.hpp  ec_optimized.cuh  fused_pipeline.cu  gpu_rule_kernel.cu  gpu_rules.cpp  gpu_rules.cu  gpu_rules.hpp  h160_bloom_filter.cu  kangaroo_kernel.cu  kangaroo_solver_gpu.hpp  pipeline.cu  puzzle_gpu.cu  puzzle_gpu.hpp  puzzle_optimized.cu  puzzle_optimized.hpp  rckangaroo_wrapper.cu  rckangaroo_wrapper.hpp  ripemd160.cu  secp256k1.cu  sha256.cu
src/platform/: cpu_platform.cpp  cuda_platform.cu  metal_platform.mm  platform.hpp
src/pool/: http_pool_client.cpp  http_pool_client.hpp  jlp_pool_client.cpp  jlp_pool_client.hpp  pool_client.hpp  pool_manager.cpp  pool_manager.hpp
src/rules/: gpu_rules.hpp
src/scrapers/: lyrics_scraper.hpp  quotes_scraper.hpp
src/tools/: build_bloom.cpp  getopt_compat.h  test_banner.cpp  utxo_bloom_builder.hpp
src/ui/: banner.hpp  brainwallet_setup.hpp  interactive.hpp
tests/: test_hash_vectors.cpp  test_platform.cpp  test_priority_queue.cpp  test_rule_engine.cpp
tools/: extract_literature_phrases.py  smart_wordlist_processor.py
website/: package-lock.json  package.json  tailwind.config.ts
website/src/app/: globals.css  layout.tsx  page.tsx
website/src/components/effects/: AnimatedCounter.tsx  GlitchText.tsx  MatrixRain.tsx  TypeWriter.tsx  index.ts
website/src/components/landing/: CTA.tsx  Comparison.tsx  Features.tsx  Hero.tsx  HowItWorks.tsx  PoolPreview.tsx  index.ts
website/src/components/layout/: Footer.tsx  Navbar.tsx  index.ts
website/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Input.tsx  index.ts
website/src/lib/: utils.ts
